Added module-info. Removed jdk8 specific code.